# voter-tg-bot

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  votes.yaml
deploy/scripts/: sqlite_migrate.py  start.sh
migrations/sqlite/: V01__create_table_vote_templates.sql  V02__create_table_votes.sql  V03__create_table_user_votes.sql
src/: application.rs  components.rs  components_container.rs  controllers.rs  db.rs  dependencies.rs  main.rs  storage.rs  utils.rs  views.rs
src/actions/: mod.rs  point_story.rs
src/commands/: command.rs  command_context.rs  command_dispatcher.rs  mod.rs
src/configuration/: token.rs
src/controller/point_story/: keyboard.rs  text.rs
src/controllers/: callbacks.rs  commands.rs  message.rs
src/controllers/callbacks/: point_story.rs
src/controllers/callbacks/point_story/: dismiss.rs  open.rs  story_point.rs
src/controllers/commands/: help.rs  point_story.rs
src/db/: database.rs  mod.rs  query.rs  sql.rs  sqlite.rs
src/db/sqlite/: database.rs  migrations.rs  models.rs  query.rs  requester.rs  sql.rs
src/db/sqlite/migrations/: create_table_user_votes.rs  init.rs  (+6 more)
src/models/: keyboard.rs  mod.rs  point_story.rs  vote.rs
src/models/point_story/: keyboard.rs  text.rs
src/storage/: votes_storage.rs
src/tg/: requester.rs
src/utils/: strong_typedef.rs
src/views/: callback.rs  commands.rs  convertions.rs  error.rs  handler.rs  message.rs  mod.rs
src/views/callback/: point_story.rs  request.rs  view.rs
src/views/commands/: commands.rs  point_story.rs
src/views/message/: view.rs
src/views/transforms/: point_story.rs
(+18 files in other folders)
