[package]
name = "voter-tg-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3"
teloxide = { version = "0.12.2", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1.64"
rusqlite = { version = "0.29.0", features = ["bundled"] }
once_cell = "1.18.0"
anyhow = "1.0.75"
mio = "0.8.11"
h2 = "0.3.24"
openssl = "0.10.60"
rustix = "0.38.19"

